// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Libp2pAuth with 3 peers intializes chains when peers connect: eventTimeline0 after disconnection 1`] = `
[
  "peerConnected",
  "peerConnected",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:authenticating:checkingIdentity:provingMyIdentity:awaitingIdentityChallenge,verifyingTheirIdentity:done",
  "authStateChanged:authenticating:checkingIdentity:provingMyIdentity:awaitingIdentityAcceptance,verifyingTheirIdentity:done",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:authenticating:checkingIdentity:provingMyIdentity:awaitingIdentityChallenge,verifyingTheirIdentity:done",
]
`;

exports[`Libp2pAuth with 3 peers intializes chains when peers connect: eventTimeline1 after disconnection 1`] = `
[
  "peerConnected",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:authenticating:awaitingInvitationAcceptance",
  "authJoined",
  "authStateChanged:authenticating:checkingIdentity:provingMyIdentity:done,verifyingTheirIdentity:awaitingIdentityProof",
  "authStateChanged:negotiating",
]
`;

exports[`Libp2pAuth with 3 peers intializes chains when peers connect: eventTimeline2 after disconnection 1`] = `
[
  "peerConnected",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:authenticating:awaitingInvitationAcceptance",
  "authJoined",
  "authStateChanged:authenticating:checkingIdentity:provingMyIdentity:done,verifyingTheirIdentity:awaitingIdentityProof",
]
`;

exports[`Libp2pAuth with 3 peers joins with an invitation: eventTimeline0 after disconnection 1`] = `
[
  "peerConnected",
  "peerConnected",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:authenticating:checkingIdentity:provingMyIdentity:awaitingIdentityChallenge,verifyingTheirIdentity:done",
  "authStateChanged:authenticating:checkingIdentity:provingMyIdentity:awaitingIdentityAcceptance,verifyingTheirIdentity:done",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:authenticating:checkingIdentity:provingMyIdentity:awaitingIdentityChallenge,verifyingTheirIdentity:done",
]
`;

exports[`Libp2pAuth with 3 peers joins with an invitation: eventTimeline1 after disconnection 1`] = `
[
  "peerConnected",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:authenticating:awaitingInvitationAcceptance",
  "authJoined",
  "authStateChanged:authenticating:checkingIdentity:provingMyIdentity:done,verifyingTheirIdentity:awaitingIdentityProof",
  "authStateChanged:negotiating",
]
`;

exports[`Libp2pAuth with 3 peers joins with an invitation: eventTimeline2 after disconnection 1`] = `
[
  "peerConnected",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:awaitingIdentityClaim",
  "authStateChanged:authenticating:awaitingInvitationAcceptance",
  "authJoined",
]
`;
